--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.3",
+    "expo-secure-store": "^14.2.3",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
