--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-shadow-2": "^7.1.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
