--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo-constants": "~17.1.4",
     "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "^14.1.5",
-    "expo-linking": "~7.1.4",
+    "expo-linking": "~7.1.7",
     "expo-router": "~5.0.3",
     "expo-secure-store": "^14.2.3",
     "expo-sharing": "~13.1.5",
@@ -37,7 +37,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.6",
-    "expo-notifications": "~0.31.4"
+    "expo-notifications": "~0.31.4",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
