--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "expo": "^53.0.17",
     "expo-constants": "~17.1.4",
+    "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
@@ -37,8 +38,7 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.6",
-    "expo-notifications": "~0.31.4",
-    "expo-dev-client": "~5.2.4"
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
