--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.0.3",
     "expo-secure-store": "^14.2.3",
     "expo-sharing": "~13.1.5",
@@ -37,8 +38,7 @@
     "react-native-shadow-2": "^7.1.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6",
-    "expo-notifications": "~0.31.4"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
