--- a/app.json
+++ b/app.json
@@ -5,12 +5,13 @@
       "expo-router",
       "expo-notifications"
     ],
-    "name": "GudangApp",
+    "name": "MyICS",
     "slug": "GudangApp",
     "android": {
       "package": "com.aguspramono.GudangApp",
       "useNextNotificationsApi": true,
-      "googleServicesFile": "./android/app/google-services.json"
+      "googleServicesFile": "./android/app/google-services.json",
+      "icon":"./assets/images/MyICS.png"
     },
     "extra": {
       "router": {},
